--- a/README.me
+++ b/README.me
@@ -5,8 +5,7 @@
 
 **Pour démarrer l'application** :  
 Depuis la racine du projet, exécutez la commande suivante :  
-```bash
-./app.sh
+```bash ./scripts/app.sh
 ```
 
 ---
