personaliser les emails

--- a/README.me
+++ b/README.me
@@ -1,6 +1,7 @@
 
 # Guide d'utilisation  
 
+# B A C K U P   ET   R E S T A U R A T I O N ***************
 ## 1) Lancement  
 
 **Pour démarrer l'application** :  
@@ -41,3 +42,18 @@ Ce script va :
 - Restaurer la base de données à partir du fichier de backup.  
 
 ---
+
+
+
+# P E R S O N N A L I S A T I O N   L O G I N      ET   E M A I L ***************
+
+-On cree un dossier keycloak_themes/my_themes : 
+    -login
+    -email 
+
+autre documentation: https://github.com/keycloak/keycloak/blob/main/themes/src/main/resources/theme/base/email/messages/messages_en.properties
+
+
+
+
+
